# PyMPO

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  mypy.ini  pyproject.toml  pyproject.toml.hatching  ruff.toml  unittest-uv.yml
.github/: dependabot.yml
.github/workflows/: static.yml  unittest-uv.yml
docs/: conf.py  index.rst  modules.rst  pympo.rst
docs/example/: autompo-num.ipynb  autompo-sym-holstein.ipynb  autompo-sym.ipynb  autompo.ipynb  pytdscf-henon-heiles.ipynb  pytdscf-taylor.ipynb  radicalpair.py  radicalpy.ipynb
docs/example/radicalpair_prop/: reduced_density.nc
example/: networkx-test.ipynb  operators-test.ipynb  sympy-test.ipynb
pympo/: __init__.py  __version__.py  bipartite.py  config.py  operators.py  unionfind.py  visualize.py
src/: lib.rs
src/pympo/: __init__.py  __version__.py  _core.pyi  bipartite.py  config.py  operators.py  utils.py  visualize.py
tests/: test.h5  test_operators.py  test_profile.py  test_util.py
