[project]
name = "pympo"
version = "0.1.0"
description = "Automatic and symbolical constructor of matrix product operator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "sympy>=1.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.0",
    "mypy>=1.13.0",
    "nbsphinx>=0.9.5",
    "pre-commit>=4.0.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
