[project]
name = "pympo"
version = "0.1.7"
readme = "README.md"
description = "Automatic and symbolical constructor of matrix product operator"
authors = [
    { name = "KenHino", email = "63284175+KenHino@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.14.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "sympy>=1.13.3",
]

[tool.maturin]
module-name = "pympo._core"
python-packages = ["pympo"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"



[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.0",
    "mypy>=1.13.0",
    "nbsphinx>=0.9.5",
    "pre-commit>=4.0.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
    "line-profiler>=4.2.0",
    "maturin>=1.8.1",
]
